# NexLua

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: update-mirror-repo.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: main.lua  main2.lua  test.lua  utils.lua  welcome.lua
app/src/main/assets/test/: issues-1.lua  test-array.lua  test-class.lua  test-luajava.lua  test-object.lua
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/luajava/: README.md  com_luajava_LuaNatives.c  jnihelper.c  jnihelper.h  jualib.cpp  luacomp.c  luacomp.h  luajava.c  luajava.h  luajavaapi.c  luajavaapi.h  luajavacore.c  luajavacore.h  nexlua.c
app/src/main/cpp/luajit-include/: lua.h  lua.hpp
app/src/main/java/com/luajava/: CFunction.java  JFunction.java  Jua.java  JuaAPI.java  Lua.java  LuaException.java  LuaNatives.java  LuaProxy.java  NotNull.java
app/src/main/java/com/luajava/cleaner/: LuaReferable.java  LuaReference.java
app/src/main/java/com/luajava/util/: ClassUtils.java
app/src/main/java/com/luajava/value/: AbstractLuaPtrValue.java  AbstractLuaRefValue.java  AbstractLuaValue.java  LuaIpairsIterator.java  LuaPairsIterator.java  LuaProxy.java  LuaType.java  LuaValue.java
app/src/main/java/com/luajava/value/immutable/: LuaBoolean.java  LuaNumber.java
app/src/main/java/com/luajava/value/referable/: LuaCFunction.java  LuaFunction.java  LuaLightUserdata.java  LuaString.java  LuaThread.java  LuaUnknown.java
app/src/main/java/com/mycompany/: CrashHandler.java  MainActivity.java  MyApplication.java  MyConfig.java  TestActivity.java  TestClass.java
app/src/main/java/com/nexlua/: LuaActivity.java  LuaApplication.java  LuaConfig.java  LuaContext.java  LuaIntent.java  LuaModule.java  LuaModuleLoader.java  LuaPrint.java  LuaUtil.java  Main2.java  TestActivity.java  TestClass.java  Welcome.java
gradle/: libs.versions.toml
luajava/: build.gradle
luajava/core/: build.gradle
luajava/core/src/main/java/com/luajava/: CFunction.java  ExternalLoader.java  JFunction.java  JMethod.java  JuaAPI.java  Lua.java  LuaConsts.java  LuaException.java  LuaHandler.java  LuaInstances.java  LuaJava.java  LuaJavaMethod.java  LuaNatives.java
luajava/native/: build.gradle
luajava/native/src/main/cpp/: CMakeLists.txt
luajava/native/src/main/cpp/luajava/: com_luajava_LuaNatives.c  invokespecial.c  jnihelper.c  jnihelper.h  luacomp.c  luacomp.h  luajava.c  luajava.h  luajavaapi.c  luajavaapi.h  luajavacore.c  luajavacore.h  luajavaloader.c  luajavaloader.h  luakit.h  lualibrary.c  lualibrary.h  luareg.h  nexlua.c
luajava/native/src/main/cpp/luajit-include/: luajit.h
luajava/src/main/cpp/: CMakeLists.txt
luajava/src/main/cpp/luajava/: README.md  com_luajava_LuaNatives.h  jnihelper.c  jnihelper.h  luacomp.c  luajava.c  luajavaapi.c  luajavacore.c  luajavacore.h  luakit.h  nexlua.c
luajava/src/main/cpp/luajit-include/: luajit.h
luajava/src/main/java/com/luajava/: CFunction.java  JFunction.java  JMethod.java  JuaAPI.java  Lua.java  LuaException.java  LuaHandler.java  LuaInstances.java  LuaNatives.java  Nullable.java
luajava/src/main/java/com/luajava/cleaner/: LuaReferable.java
luajava/src/main/java/com/luajava/util/: ClassUtils.java  LRUCacheFactory.java
luajava/src/main/java/com/luajava/value/: AbstractLuaRefValue.java  AbstractLuaValue.java  LuaIpairsIterator.java  LuaPairsIterator.java  LuaProxy.java  LuaValue.java
nexlua/: build.gradle
nexlua/core/: build.gradle
nexlua/core/src/main/java/com/nexlua/: LuaActivity.java  LuaApplication.java  LuaConfig.java  LuaContext.java  LuaContextUtils.java  LuaResources.java  LuaUtil.java
nexlua/native/: build.gradle
nexlua/native/src/main/cpp/: CMakeLists.txt  lib_dump.c  lib_import.c  nexlua.h
nexlua/src/main/cpp/: CMakeLists.txt  lib_dump.c  lib_import.c  libnexlua.c  libnexlua.h  lualibrary.c  lualibrary.h  nexlua.c  nexlua.h
nexlua/src/main/cpp/lib/: dump.c  dump.h  import.c  import.h
nexlua/src/main/java/com/nexlua/: LuaAccessibilityService.java  LuaActivity.java  LuaApplication.java  LuaBroadcastReceiver.java  LuaConfig.java  LuaContext.java  LuaContextUtils.java  LuaIntent.java  LuaModule.java  LuaModuleLoader.java  LuaPrint.java  LuaUtil.java  Main.java  PathUtil.java  Welcome.java
nexlua/src/main/java/com/nexlua/module/: LuaAbstractModule.java  LuaAssetsModule.java  LuaDexModule.java  LuaFileModule.java  LuaModule.java  LuaModuleLoader.java  LuaResourceModule.java
(+48 files in other folders)
